[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["yuji38kwmt"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"

[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
pyinstaller = { version = "^6.10", python = "=3.12" }

[tool.poetry.scripts]
sample = "sample.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

